--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </div>
     <div class="cotainer">
       <div class="row">
-        <div class="col-6 btnb">
+        <div class="col-6 col-sm-12 btnb">
           <a href="yes.html" class="btn btn-outline-success btn-lg">Yes</a>
         </div>
-        <div class="col-6 btnbb">
+        <div class="col-6 col-sm-12 btnbb">
           <a href="no.html" class="btn btn-outline-danger btn-lg">No</a>
         </div>
       </div>
